# teleflow

./: README.md  pyproject.toml
docs/: flows.md  getting-started.md  readme.md  settings.md  theming.md  transforms.md  views.md
docs/ru/: flows.md  getting-started.md  readme.md  settings.md  theming.md  transforms.md  views.md
examples/: casino.py  quickstart.py
src/teleflow/: __init__.py  _shared.py  app.py  browse.py  dashboard.py  flow.py  methods.py  registry.py  search.py  settings.py  widget.py
src/teleflow/uilib/: __init__.py  helpers.py  keyboard.py  theme.py
tests/: test_tg_app.py  test_tg_browse.py  test_tg_flow.py  test_tg_methods.py
