[project]
name = "teleflow"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "emergent",
    "telegrinder>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teleflow"]

[tool.uv.sources]
emergent = { git = "https://github.com/prostomarkeloff/emergent" }
telegrinder = { git = "https://github.com/timoniq/telegrinder", tag = "1.0.0" }
